--- a/package.json
+++ b/package.json
@@ -13,11 +13,26 @@
   "keywords": [
     "date",
     "datesuper",
+    "date-super",
+    "super-date",
+    "date-functions",
     "datefunctions",
+    "date-methods",
     "datemethods",
+    "date-extension",
     "dateextension",
+    "date-operations",
     "dateoperations",
-    "datediff"
+    "date-diff",
+    "datediff",
+    "vijith",
+    "vijith bk",
+    "vijith balakrishnan",
+    "vijith b",
+    "date",
+    "date utility",
+    "date utilities",
+    "date additional"
   ],
   "author": "Vijith <vijubalak@gmail.com> (http://www.codestack.in)",
   "license": "ISC",
